# fdo-kernel-mvk

./: .gitignore  CITATION.cff  LICENSE  MVK_FINAL_BOUNDARY_REPORT.md  MVK_MOVE_MAP.md  MVK_ROOT_INVENTORY.md  Makefile  README.md  README.zh-CN.md  demo.py  mvk.py  object.json  pyproject.toml  tests.sh  trace.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  boundary.md  conformance-surface.md  fdo-relation-note.md  formal_model.md  invariants.md  one-line-positioning.md  replay-model.md  walkthrough.md
docs/architecture/: agent-architecture-map.md  agent-runtime-osi.md  agent-runtime-stack.md  ai-agent-security-architecture.md  ai-agent-stack-architecture.md  execution-integrity-vs-governance-runtime.md  runtime-trace-integrity-stack.md
docs/assets/: agent-architecture-map.mmd  agent-runtime-osi.mmd  agent-runtime-stack.mmd  ai-agent-security-architecture.mmd  ai-agent-stack-architecture.mmd
docs/research/: POSITION_PAPER.md
docs/roadmap-notes/: success-side-execution-traces.md
docs/schema-notes/: evidence-inference-action.example.json  evidence-inference-action.md
examples/: __init__.py  demo.md  demo.py  run_tamper_rule.sh  run_tamper_state.sh  run_valid.sh
examples/fixtures/: object.json
kernel/: __init__.py  checkpoint.py  cli.py  drift.py  gate.py  object_model.py  verify.py
tests/: test_reproducibility.py
tests/scripts/: tests.sh
