[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fdo-kernel-mvk"
version = "0.1.0"
description = "Execution integrity layer for deterministic, replay-verifiable autonomous object runs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bin Zhang" }]

[project.scripts]
fdo-kernel-mvk = "kernel.cli:main"

[tool.setuptools]
packages = ["kernel"]
